@@ -45,7 +45,8 @@ Date: 2025-28-09
     - Changed the atmospheric condenser to have more output fluidboxes, to match its new model.
     - Changed the recipe of transistors to take less carbon and use 1 rubber.
     - Doubled amount of radium needed for AEM packs, which is still a better ratio then before.
-    
+    - Slightly lowered the profile growth of the coil heater.
+
 ---------------------------------------------------------------------------------------------------
 Version: 0.7.007
 Date: 2025-22-11
